--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -1,29 +1,135 @@
 .landing-container {
     background: transparent;
     height:100vh;
+    display:flex;
+    width:100vw;
 }
 
-.landing-block {
-    background:#39f966;
-    width:50vw;
-    height:75vh;
-    z-index:-1;
-    position:absolute;
-    box-shadow: 3px 1px 5px 1px #888888;
-}
-
-/*.landing-img {*/
-    /*height:50vh;*/
-    /*width:50vw;*/
-    /*filter:grayscale(80%);*/
-    /*position:absolute;*/
-    /*z-index:0;*/
-/*}*/
-
-.landing-video {
+.placeholder-video {
     background:#fff;
-    box-shadow: 3px 1px 5px 1px #888888;
-    margin-right:25vw;
-    margin-top:15vh;
+}
+.placeholder-video-text {
+    font-weight:bold;
+    font-size:large;
+    overflow:hidden;
+    margin-top:3em;
+    color:#7df9b9;
+    animation: textloader 2.1s infinite linear;
+
+}
+
+/*.placeholder-video-text strong {*/
+    /*width:0;*/
+    /*background:#fff;*/
+    /*overflow:hidden;*/
+/*}*/
+@keyframes textloader {
+    0% {
+        width:0;
+    }
+    50% {
+        width:60%;
+    }
+    75% {
+        width:100%;
+    }
+}
+
+.landing-video-container {
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    width:50%;
+    height:100%;
+    /*background: #fff;*/
+    /*background-image: url('../img/TC_Mark_Lightened_RGB.svg');*/
+    /*background-repeat: no-repeat;*/
+    /*background-size:10%;*/
+}
+.landing-video {
+    background:transparent;
+    /*margin-right:35vw;*/
+    /*margin-top:15vh;*/
     z-index:1;
+    /*max-height:650px;*/
+    /*max-width:650px;*/
+    width:50vw;
+}
+.landing-text-container {
+    display:flex;
+    flex-direction:column;
+    text-align:center;
+    align-items:center;
+    background: #7df9b9;
+    width:50%;
+    justify-content: center;
+}
+
+.landing-blockquote {
+    font-size:medium;
+    color:#fff;
+    font-weight:700;
+    font-family:"Morebi Rounded", Times,serif;
+    margin:0;
+
+}
+
+.landing-text-p {
+    font-weight:600;
+    font-size:medium;
+    color:#fff;
+    width:75%;
+    font-family:"Morebi Rounded", Times,serif;
+}
+.landing-text-title {
+    font-size:xx-large;
+    font-weight:700;
+    color:#fff;
+    font-family:"Morebi Rounded", Times,serif;
+
+}
+.landing-logo {
+    height:25%;
+    width:25%;
+}
+
+.spinner, .spinner:after {
+    border-radius:50%;
+    width:5em;
+    height:5em;
+}
+
+.spinner {
+    font-size: 15px;
+    position: relative;
+    border-top: 1.1em solid rgba(255, 255, 255, 0.2);
+    border-right: 1.1em solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
+    border-left: 1.1em solid #7df9b9;
+    /*-webkit-transform: translateZ(0);*/
+    /*-ms-transform: translateZ(0);*/
+    transform: translateZ(0);
+    /*-webkit-animation: spin 1.1s infinite linear;*/
+    animation: spin 1.1s infinite linear;
+}
+
+@keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@media screen and ( max-width:767px){
+    .landing-video-container {
+        display:none;
+    }
+    .landing-text-container {
+        width:100%;
+    }
 }
