--- a/src/components/PastEvents.css
+++ b/src/components/PastEvents.css
@@ -7,13 +7,43 @@
 }
 
 .image-wrapper {
+    opacity:1;
     flex-grow: 1;
     flex-basis: 25%;
     max-width: 400px;
     margin: 1em;
     box-shadow: 3px 1px 5px 1px #888888;
+    position:relative;
 }
 
+.image-wrapper span {
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction:column;
+    opacity:0;
+    position:absolute;
+    height:30%;
+    width:0;
+    background:#7df9b9;
+    top:35%;
+    left:25%;
+    box-shadow: 3px 1px 5px 1px #333;
+    text-align:center;
+    color:#fff;
+    font-weight:bold;
+    transition:all 0.3s ease-in-out;
+    font-family:"Morebi Rounded",Times,serif;
+}
+.image-wrapper:hover,.image-wrapper:focus,.image-wrapper:active {
+    /*opacity:0.5;*/
+}
+
+.image-wrapper:hover span,.image-wrapper:focus span,.image-wrapper:active span{
+    opacity:1;
+    width:50%;
+    cursor:pointer;
+}
 .events-gallery img {
     height: 100%;
     width: 100%;
@@ -27,9 +57,7 @@
 }
 
 .event-break {
-    /*color:#7df9b9;*/
     width:50%;
-    /*background:#7df9b9;*/
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(125, 249, 185, 0.75), rgba(0, 0, 0, 0));
@@ -38,7 +66,6 @@
 @media screen and (max-width: 767px) {
     .image-wrapper {
         flex-basis: 40%;
-        max-width: 300px;
     }
 
 }
