--- a/src/components/SubscribeBtn.css
+++ b/src/components/SubscribeBtn.css
@@ -1,15 +1,29 @@
-.subscribe-button {
+.subscribe-container input {
+    margin:1em;
+    background:#fff;
+    border:1px solid #eaf8f0;
+    height:3em;
+    text-align:center;
+    border-style:solid;
+    box-shadow:1px 1px 1px 1px #b5fbd7;
+}
+.subscribe-container input:active,.subscribe-container input:focus, .subscribe-container input:hover {
+    border:1px solid #7df9b9;
+    outline:none;
+}
+.subscribe-container button {
     background: #7df9b9;
     border: none;
     color: #fff;
     font-weight: bold;
     text-transform: uppercase;
-    width: 100%;
+    width: 50%;
     padding: 1em;
 }
 
-.subscribe-button:hover {
+.subscribe-container button:hover {
     animation: shake 0.3s ease-in-out;
+    cursor:pointer;
 }
 
 @keyframes shake {
