comments and small changes

--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -18,11 +18,7 @@
 
 }
 
-/*.placeholder-video-text strong {*/
-    /*width:0;*/
-    /*background:#fff;*/
-    /*overflow:hidden;*/
-/*}*/
+/* Animation that loops the Placeholder... text*/
 @keyframes textloader {
     0% {
         width:0;
@@ -42,18 +38,10 @@
     justify-content:center;
     width:50%;
     height:100%;
-    /*background: #fff;*/
-    /*background-image: url('../img/TC_Mark_Lightened_RGB.svg');*/
-    /*background-repeat: no-repeat;*/
-    /*background-size:10%;*/
 }
 .landing-video {
     background:transparent;
-    /*margin-right:35vw;*/
-    /*margin-top:15vh;*/
     z-index:1;
-    /*max-height:650px;*/
-    /*max-width:650px;*/
     width:50vw;
 }
 .landing-text-container {
@@ -100,6 +88,8 @@
     height:5em;
 }
 
+/* Spinner animation by rotating the border*/
+
 .spinner {
     font-size: 15px;
     position: relative;
@@ -107,13 +97,11 @@
     border-right: 1.1em solid rgba(255, 255, 255, 0.2);
     border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
     border-left: 1.1em solid #7df9b9;
-    /*-webkit-transform: translateZ(0);*/
-    /*-ms-transform: translateZ(0);*/
     transform: translateZ(0);
-    /*-webkit-animation: spin 1.1s infinite linear;*/
     animation: spin 1.1s infinite linear;
 }
 
+/* Animation that loops the spinner icon*/
 @keyframes spin {
     0% {
         -webkit-transform: rotate(0deg);
