--- a/src/components/PastEvents.css
+++ b/src/components/PastEvents.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
-    justify-content: space-between;
-    /*padding:1%;*/
+    justify-content: space-around;
 }
 
 .image-wrapper {
@@ -66,6 +65,7 @@
 @media screen and (max-width: 767px) {
     .image-wrapper {
         flex-basis: 40%;
+        max-width:40%;
     }
 
 }
